--- a/packages/sum/package.json
+++ b/packages/sum/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@tunguyenct/ui",
-  "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "name": "@tunguyenct/sum",
+  "version": "1.0.0",
+  "main": "./src/index.js",
+  "files": [
+    "src"
+  ],
   "license": "MIT",
-  "scripts": {
-    "lint": "eslint *.ts*"
-  },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
