--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,15 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js 12.x
-        uses: actions/setup-node@v2
+      - name: PNPM setup
+        uses: pnpm/action-setup@v2
         with:
-          node-version: 12.x
+          version: 7.13.0
+
+      - name: Setup Node.js 16.x
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: yarn
+        run: pnpm install
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
