--- a/packages/sum/package.json
+++ b/packages/sum/package.json
@@ -7,7 +7,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "pubpub": "npm publish --registry https://registry.npmjs.org --access=public"
   },
   "license": "MIT",
   "devDependencies": {
