--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,5 +31,9 @@ jobs:
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
+        with:
+          version: pnpm version
+          publish: pnpm release
         env:
           GITHUB_TOKEN: ${{ secrets.PRIVATE_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
