--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@tunguyenct/ui",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
-  "private": true,
+  "files": [
+    "index.tsx",
+    "src"
+  ],
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc --noEmit"
+  },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
