--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "version": "changeset version",
+    "changeset": "changeset",
     "prepare-release": "pnpm build",
     "release": "pnpm prepare-release && changeset publish"
   },
