--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@tunguyenct/ui": "workspace:*",
-    "@tunguyenct/sum": "workspace:*"
+    "@tunguyenct/sum": "workspace:*",
+    "@tunguyenct/functions": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
