--- a/packages/sum/package.json
+++ b/packages/sum/package.json
@@ -7,7 +7,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc -w"
   },
   "license": "MIT",
   "devDependencies": {
