--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "0.1.3-next.0",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
